--- a/ServerTestWrapper/packages.config
+++ b/ServerTestWrapper/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Common.Logging" version="2.0.0" targetFramework="net46" />
   <package id="log4net" version="2.0.8" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net46" />
+  <package id="NHttp" version="0.1.9.0" targetFramework="net46" />
 </packages>
